# TwoAxisMachine

./: .gitignore  CMakeLists.txt  STM32F401xE.cmake
Drivers/BSP/X-NUCLEO-IHM02A1/NUCLEO-F401RE/: xnucleoihm02a1_interface.c
Drivers/CMSIS/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
MicrosteppingMotor/: CMakeLists.txt
MicrosteppingMotor/MDK-ARM/: Project.uvoptx  Project.uvprojx
MicrosteppingMotor/Src/: main.c  params.c
